@@ -17,10 +17,27 @@
  * Incoming nodes: 1
  * Outgoing nodes: 1
  *
+ * The example below creates a sub-workflow node that passes the parent
+ * execution's variable 'x' to the variable 'y' in the child execution when the
+ * sub-workflow is started. When it end, the child execution's 'y' variable is
+ * passed to the parent execution as 'z'.
+ *
  * <code>
+ * $subWorkflow = new ezcWorkflowNodeSubWorkflow(
+ *   array(
+ *     'workflow'  => 'IncrementVariable',
+ *     'variables' => array(
+ *       'in' => array(
+ *         'x' => 'y'
+ *       ),
+ *       'out' => array(
+ *         'y' => 'z'
+ *       )
+ *     )
+ *   )
+ * );
  * </code>
  *
- * @todo Example of build up, example of resume with parameters.
  * @package Workflow
  * @version //autogen//
  */
@@ -38,15 +55,40 @@ class ezcWorkflowNodeSubWorkflow extends ezcWorkflowNode
      * Constructs a new sub workflow with the configuration $configuration.
      *
      * Configuration format
-     * - <b>String:</b>
-     *  The name of the workflow to execute. The workflow is loaded using the
-     *  loadByName method on the execution engine.
+     * <ul>
+     * <li>
+     *   <b>String:</b>
+     *   The name of the workflow to execute. The workflow is loaded using the
+     *   loadByName method on the execution engine.
+     * </li>
+     *
+     * <li>
+     *   <b>Array:</b>
+     *   <ul>
+     *     <li><i>workflow:</i> The name of the workflow to execute. The workflow
+     *     is loaded using the loadByName method on the execution engine.</li>
+     *     <li><i>variables:</i> An array with the information for mapping
+     *     workflow variables between parent and child workflow execution.</li>
+     *   </ul>
+     * <li>
+     * </ul>
      *
      * @param mixed $configuration
-     * @throws ezcWorkflowDefinitionStorageException
      */
     public function __construct( $configuration )
     {
+        if ( is_string( $configuration ) )
+        {
+            $configuration = array( 'workflow' => $configuration );
+        }
+
+        if ( !isset( $configuration['variables'] ) )
+        {
+            $configuration['variables'] = array(
+              'in' => array(), 'out' => array()
+            );
+        }
+
         parent::__construct( $configuration );
     }
 
@@ -65,13 +107,18 @@ class ezcWorkflowNodeSubWorkflow extends ezcWorkflowNode
             );
         }
 
-        $workflow = $execution->definitionStorage->loadByName( $this->configuration );
+        $workflow = $execution->definitionStorage->loadByName( $this->configuration['workflow'] );
 
         // Sub Workflow is not interactive.
         if ( !$workflow->isInteractive() && !$workflow->hasSubWorkflows() )
         {
             $subExecution = $execution->getSubExecution( null, false );
             $subExecution->workflow = $workflow;
+
+            $this->passVariables(
+              $execution, $subExecution, $this->configuration['variables']['in']
+            );
+
             $subExecution->start();
         }
         // Sub Workflow is interactive.
@@ -82,6 +129,11 @@ class ezcWorkflowNodeSubWorkflow extends ezcWorkflowNode
             {
                 $subExecution = $execution->getSubExecution();
                 $subExecution->workflow = $workflow;
+
+                $this->passVariables(
+                  $execution, $subExecution, $this->configuration['variables']['in']
+                );
+
                 $subExecution->start( $this->id );
 
                 $this->state = $subExecution->getId();
@@ -98,6 +150,10 @@ class ezcWorkflowNodeSubWorkflow extends ezcWorkflowNode
         // Execution of Sub Workflow has ended.
         if ( $subExecution->hasEnded() )
         {
+            $this->passVariables(
+              $subExecution, $execution, $this->configuration['variables']['out']
+            );
+
             $this->activateNode( $execution, $this->outNodes[0] );
 
             $this->state = 0;
@@ -121,7 +177,28 @@ class ezcWorkflowNodeSubWorkflow extends ezcWorkflowNode
      */
     public static function configurationFromXML( DOMElement $element )
     {
-        return $element->getAttribute( 'subWorkflowName' );
+        $configuration = array(
+          'workflow'  => $element->getAttribute( 'subWorkflowName' ),
+          'variables' => array(
+            'in' => array(), 'out' => array()
+          )
+        );
+
+        $xpath = new DOMXPath( $element->ownerDocument );
+        $in    = $xpath->query( 'in/variable', $element );
+        $out   = $xpath->query( 'out/variable', $element );
+
+        foreach ( $in as $variable )
+        {
+            $configuration['variables']['in'][$variable->getAttribute( 'name' )] = $variable->getAttribute( 'as' );
+        }
+
+        foreach ( $out as $variable )
+        {
+            $configuration['variables']['out'][$variable->getAttribute( 'name' )] = $variable->getAttribute( 'as' );
+        }
+
+        return $configuration;
     }
 
     /**
@@ -131,7 +208,41 @@ class ezcWorkflowNodeSubWorkflow extends ezcWorkflowNode
      */
     public function configurationToXML( DOMElement $element )
     {
-        $element->setAttribute( 'subWorkflowName', $this->configuration );
+        $element->setAttribute( 'subWorkflowName', $this->configuration['workflow'] );
+
+        if ( !empty( $this->configuration['variables']['in'] ) )
+        {
+            $in = $element->appendChild(
+              $element->ownerDocument->createElement( 'in' )
+            );
+
+            foreach ( $this->configuration['variables']['in'] as $fromName => $toName )
+            {
+                $variable = $in->appendChild(
+                  $in->ownerDocument->createElement( 'variable' )
+                );
+
+                $variable->setAttribute( 'name', $fromName );
+                $variable->setAttribute( 'as', $toName );
+            }
+        }
+
+        if ( !empty( $this->configuration['variables']['out'] ) )
+        {
+            $out = $element->appendChild(
+              $element->ownerDocument->createElement( 'out' )
+            );
+
+            foreach ( $this->configuration['variables']['out'] as $fromName => $toName )
+            {
+                $variable = $out->appendChild(
+                  $out->ownerDocument->createElement( 'variable' )
+                );
+
+                $variable->setAttribute( 'name', $fromName );
+                $variable->setAttribute( 'as', $toName );
+            }
+        }
     }
 
     /**
@@ -142,7 +253,24 @@ class ezcWorkflowNodeSubWorkflow extends ezcWorkflowNode
      */
     public function __toString()
     {
-        return 'Sub Workflow: ' . $this->configuration;
+        return 'Sub Workflow: ' . $this->configuration['workflow'];
+    }
+
+    /**
+     * Passes variables from one execution context to another.
+     *
+     * @param  ezcWorkflowExecution $from The execution context the variables are passed from.
+     * @param  ezcWorkflowExecution $to The execution context the variables are passed to.
+     * @param  array                $variables The names of the variables.
+     * @throws ezcWorkflowExecutionException if a variable that is to be passed does not exist.
+     * @ignore
+     */
+    protected function passVariables( ezcWorkflowExecution $from, ezcWorkflowExecution $to, array $variables )
+    {
+        foreach ( $variables as $fromName => $toName )
+        {
+            $to->setVariable( $toName, $from->getVariable( $fromName ) );
+        }
     }
 }
 ?>
