@@ -1,0 +1,22 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<workflow name="WorkflowWithSubWorkflowAndVariablePassing" version="1">
+  <node id="1" type="Start">
+    <outNode id="2"/>
+  </node>
+  <node id="2" type="VariableSet">
+    <variable name="x">
+      <integer>1</integer>
+    </variable>
+    <outNode id="3"/>
+  </node>
+  <node id="3" type="SubWorkflow" subWorkflowName="IncrementVariable">
+    <in>
+      <variable name="x" as="y"/>
+    </in>
+    <out>
+      <variable name="y" as="z"/>
+    </out>
+    <outNode id="4"/>
+  </node>
+  <node id="4" type="End"/>
+</workflow>
